Fix z-index of menu items

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -116,7 +116,7 @@ canvas {
 }
 
 .cubes canvas {
-  z-index: 99;
+  z-index: 89;
 }
 
 .menu {
